Adding interesting stuff

--- a/config.json.example
+++ b/config.json.example
@@ -6,6 +6,8 @@
 
   "replyrate": 5,
   "followinvites": true,
+  
+  "owners": ["wikimedia/Polsaker", "unaffiliated/ravioli"],
 
   "channels": {
     "#donger": {
